--- a/Crosby Mowry - Portfolio/index.html
+++ b/Crosby Mowry - Portfolio/index.html
@@ -7,9 +7,14 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <h1 class="title">Hello World</h1>
-        <div id="mainDiv">Hello Div</div>
-        <br />
-        <button onclick="buttonClicked()">Click me</button>
+        <h1 class="title">Crosby Mowry - Portfolio</h1>
+        <div id="mainDiv">With a strong focus on minimal, clean layouts, typography, and hierarchy, my 
+            work prioritizes structure and readability while maintaining an engaging visual presence.</div>
+  
+    <nav>
+    <a href="Page1.html">Go to Page 1</a> |
+    <a href="Page2.html">Go to Page 2</a>
+     | <a href="page3.html">Go to Page 3</a>   
+  </nav>
     </body>
 </html>
