Background Color Change

--- a/Crosby Mowry - Portfolio/index.html
+++ b/Crosby Mowry - Portfolio/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css" />
         <script src="script.js"></script>
     </head>
-    <body>
+    <body style="background-color: black; color: red; ">
         <h1 class="title">Crosby Mowry - Portfolio</h1>
         <div id="mainDiv">With a strong focus on minimal, clean layouts, typography, and hierarchy, my 
             work prioritizes structure and readability while maintaining an engaging visual presence.</div>
