--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             work prioritizes structure and readability while maintaining an engaging visual presence.</div>
   
     <nav>
-    <a href="Page1.html">Go to page 1</a> |
-    <a href="Page2.html">Go to page 2</a>
+    <a href="page1.html">Go to page 1</a> |
+    <a href="page2.html">Go to page 2</a>
      | <a href="page3.html">Go to page 3</a>   
   </nav>
     </body>
