--- a/page1.html
+++ b/page1.html
@@ -12,7 +12,7 @@
     
     <nav>
     <a href="index.html">Go to Home</a> |
-    <a href="Page2.html">Go to page 2</a>
+    <a href="page2.html">Go to page 2</a>
      | <a href="page3.html">Go to page 3</a> 
   </nav>
     </body>
