--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
     
     <nav>
      <a href="index.html">Go to Home</a> |
-    <a href="Page1.html">Go to page 1</a>
+    <a href="page1.html">Go to page 1</a>
      | <a href="page3.html">Go to page 3</a> 
   </nav>
     </body>
