--- a/page3.html
+++ b/page3.html
@@ -11,8 +11,8 @@
     
     <nav>
    <a href="index.html">Go to Home</a> |
-    <a href="Page1.html">Go to page 1</a>
-     | <a href="Page2.html">Go to page 2</a>  
+    <a href="page1.html">Go to page 1</a>
+     | <a href="page2.html">Go to page 2</a>  
   </nav>
     </body>
 </html>
