--- a/gifshowcase.html
+++ b/gifshowcase.html
@@ -62,6 +62,21 @@
     Photoshop, After Effects, and Premier pro.</p>
 
   <div class="gif-container">
+      <div style="margin-top: 50px;">
+  <a href="index.html" style="
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #f7e4d6;
+    color: #1d2d44;
+    text-decoration: none;
+    border-radius: 6px;
+    font-weight: bold;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    transition: background-color 0.3s ease;
+  " onmouseover="this.style.backgroundColor='#e9d4c2'" onmouseout="this.style.backgroundColor='#f7e4d6'">
+    ← Back to Home
+  </a>
+</div>
     <div class="gif-box">
       <img src="gif_1" alt="GIF 1 description">
       <div class="caption">Silly Intimidation - SHHHhhh :)</div>
@@ -74,6 +89,7 @@
       <img src="gif_3" alt="GIF 3 description">
       <div class="caption">Personal Brand - Motion Graphic</div>
     </div>
+      
   </div>
 
 </body>
