--- a/page3.html
+++ b/page3.html
@@ -13,6 +13,7 @@
    <a href="index.html">Go to Home</a> |
     <a href="page1.html">Go to page 1</a>
      | <a href="page2.html">Go to page 2</a>  
+       | <a href="gifshowcase.html">GIF Showcase</a>
   </nav>
     </body>
 </html>
