--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css" />
         <script src="script.js"></script>
     </head>
-    <body style="background-color: black; color: red; ">
+    <body style="background-color: peachpuff; color: red; ">
         <h1 class="title">Crosby Mowry - Portfolio</h1>
         <div id="mainDiv">With a strong focus on minimal, clean layouts, typography, and hierarchy, my 
             work prioritizes structure and readability while maintaining an engaging visual presence.</div>
@@ -14,7 +14,8 @@
     <nav>
     <a href="page1.html">Go to page 1</a> |
     <a href="page2.html">Go to page 2</a>
-     | <a href="page3.html">Go to page 3</a>   
+     | <a href="page3.html">Go to page 3</a>
+    |    <a href="gifshowcase.html">GIF Showcase</a>  
   </nav>
     </body>
 </html>
