--- a/page2.html
+++ b/page2.html
@@ -14,6 +14,7 @@
      <a href="index.html">Go to Home</a> |
     <a href="page1.html">Go to page 1</a>
      | <a href="page3.html">Go to page 3</a> 
+       | <a href="gifshowcase.html">GIF Showcase</a>
   </nav>
     </body>
 </html>
