--- a/page2.html
+++ b/page2.html
@@ -1,20 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Title</title>
-    </head>
-    <body><h1 class="title">Penguin AD ~ Instagram </h1>
-        <div id="mainDiv">An Instagram advertisement dedicated to draw traffic towards the 
-            Save The Penguins movement (which is something I made up).</div>
+<head>
+  <meta charset="UTF-8" />
+  <title>Penguin AD ~ Instagram</title>
+  <style>
+    body {
+      font-family: 'Helvetica Neue', sans-serif;
+      background-color: #c2d8f4;
+      color: #1d2d44;
+      margin: 40px;
+    }
 
-    <img src="Image_2.png" alt="Save The Penguins advertisement for an Instagram Story" width="300">
-    
-    <nav>
-     <a href="index.html">Go to Home</a> |
-    <a href="page1.html">Go to page 1</a>
-     | <a href="page3.html">Go to page 3</a> 
-       | <a href="gifshowcase.html">GIF Showcase</a>
+    h1.title {
+      font-size: 2.5rem;
+      color: #f7e4d6;
+      margin-bottom: 20px;
+    }
+
+    #mainDiv {
+      font-size: 1rem;
+      max-width: 700px;
+      line-height: 1.6;
+      margin-bottom: 30px;
+    }
+
+    img {
+      display: block;
+      max-width: 100%;
+      width: 300px;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      margin-bottom: 40px;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #1d2d44;
+      background-color: #f7e4d6;
+      padding: 8px 16px;
+      border-radius: 6px;
+      margin-right: 10px;
+      font-weight: bold;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: background-color 0.3s ease;
+    }
+
+    nav a:hover {
+      background-color: #e9d4c2;
+    }
+  </style>
+</head>
+<body>
+
+  <h1 class="title">Penguin AD ~ Instagram</h1>
+
+  <div id="mainDiv">
+    An Instagram advertisement dedicated to draw traffic towards the 
+    Save The Penguins movement (which is something I made up).
+  </div>
+
+  <img src="Image_2.png" alt="Save The Penguins advertisement for an Instagram Story">
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="page1.html">Page 1</a>
+    <a href="page3.html">Page 3</a>
+    <a href="gifshowcase.html">GIF Showcase</a>
   </nav>
-    </body>
+
+</body>
 </html>
