Net Art Index Update

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <a href="page2.html">Page 2</a>
     <a href="page3.html">Page 3</a>
     <a href="gifshowcase.html">GIF Showcase</a>
+    <a href="net.art/about.html">Net Art</a>
   </nav>
 
 </body>
