--- a/net.art/page3.html
+++ b/net.art/page3.html
@@ -90,7 +90,7 @@
 
   </div>
 
-  <a href="about.html" class="home-button">Back to Home Page</a>
+<a href="../index.html" class="home-button">Back to Home Page</a>
 
 </body>
 </html>
